--- a/basic_version.ipynb
+++ b/basic_version.ipynb
@@ -6,7 +6,7 @@
       "name": "basic_version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOs+s6DeGKn31lW/t/5lLOx",
+      "authorship_tag": "ABX9TyMQqWodfR6agP0G5KGaZMsI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +72,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -90,7 +90,7 @@
         "rframe = pd.DataFrame(team)\n",
         "rframe.head()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -174,7 +174,7 @@
         "rframe['rating_w_zero'] = 1500\n",
         "rframe"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -388,7 +388,7 @@
         "rframe['result_w1'] = [1,0,0,0,0,0,0,0,0,1,1,0,1,1,1,1,1,1]\n",
         "rframe.head(10)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -549,7 +549,7 @@
         "rframe['rating_w_1'] = rframe['rating_w_zero'] + (20*(rframe['result_w1'] - rframe['win_prob_w1']))\n",
         "rframe"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -840,7 +840,7 @@
         "contests_w2['sum_check'] = contests_w2[col_list].sum(axis=1)\n",
         "contests_w2['sum_check']"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -887,7 +887,7 @@
       "source": [
         "contests_w2"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1315,7 +1315,7 @@
       "source": [
         "contests_w2 = contests_w2.drop(['sum_check'], axis = 1)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1378,7 +1378,7 @@
         "contests_w2['opp_team'] = ['SYD','GEE','CAR','COL','PAD','GWS','BRI','NME','FRE','RIC','STK','GLD','ESS','HAW','MEL','ADL','WCE','WBD']\n",
         "contests_w2"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1806,7 +1806,7 @@
       "source": [
         "contests_w2.columns = ['team','seq','win_prob_w1','rating_w_zero','result_w1','rating_w_1','G1','G2','G3','G4','G5','G6','G7','G8','G9','opp_team']"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1825,7 +1825,7 @@
         "lookup_vals_w2.columns = ['opp_team','rating_w1_opp']\n",
         "lookup_vals_w2.head()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1910,7 +1910,7 @@
         "                      on ='opp_team', \n",
         "                      how ='left')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1926,7 +1926,7 @@
       "source": [
         "w2_joined"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2374,7 +2374,7 @@
         "## Now the formula can be applied row by row:\n",
         "w2_joined['win_prob_w2'] = 1/(1 + (10**((w2_joined['rating_w1_opp']-w2_joined['rating_w_1'])/400)))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2390,7 +2390,7 @@
       "source": [
         "w2_joined"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2885,7 +2885,7 @@
       "source": [
         "rframe_2 = w2_joined[['team','seq','win_prob_w2','rating_w_1']]"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2914,7 +2914,7 @@
       "source": [
         "rframe_2['result_w2'] = [0,0,0,1,0,1,1,1,0,0,1,0,1,1,0,1,1,0]"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2930,7 +2930,7 @@
       "source": [
         "rframe_2"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3163,7 +3163,7 @@
         "rframe_2['rating_w_2'] = rframe_2['rating_w_2'].round(2)\n",
         "rframe_2"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3416,7 +3416,7 @@
         "contests_w3['opp_team'] = ['GLD','COL','FRE','BRI','STK','CAR','HAW','ADL','MEL','GEE','GWS','WBD','WCE','SYD','ESS','RIC','NME','PAD']\n",
         "contests_w3"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3688,7 +3688,7 @@
         "lookup_vals_w3.columns = ['opp_team','rating_w2_opp']\n",
         "lookup_vals_w3.head()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3773,7 +3773,7 @@
         "                      on ='opp_team', \n",
         "                      how ='left')"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3789,7 +3789,7 @@
       "source": [
         "w3_joined"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4066,7 +4066,7 @@
         "## Now the formula can be applied row by row:\n",
         "w3_joined['win_prob_w3'] = 1/(1 + (10**((w3_joined['rating_w2_opp']-w3_joined['rating_w_2'])/400)))"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4082,7 +4082,7 @@
       "source": [
         "w3_joined"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4382,17 +4382,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "n6XP3G8S-5_t",
-        "outputId": "8a4611d9-2bbc-44a4-d4ce-b6045529efe1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "outputId": "8a4611d9-2bbc-44a4-d4ce-b6045529efe1"
       },
       "source": [
         "quick_results_check = w3_joined[['team','seq','win_prob_w3']]\n",
         "quick_results_check.head()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4481,23 +4481,23 @@
         "quick_results_check['actual_w3'] = [1,1,1,0,1,0,1,0,0,0,1,0,0,0,0,1,1,1]\n",
         "qrc = quick_results_check"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "2o2oRnJvAwmL",
-        "outputId": "2f11cc73-cfa9-4607-c4fd-4f03796ee0d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "outputId": "2f11cc73-cfa9-4607-c4fd-4f03796ee0d4"
       },
       "source": [
         "qrc.head()"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4592,24 +4592,24 @@
         "# Remove the 50% rows (no favourites)\n",
         "qrc_filtered = qrc[qrc['win_prob_w3'] != 0.5]"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "EHHq1KQCBc-l",
-        "outputId": "ddf8103b-06b2-4af8-90b5-a2ab590bed12",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 421
-        }
+        },
+        "outputId": "ddf8103b-06b2-4af8-90b5-a2ab590bed12"
       },
       "source": [
         "qrc_filtered = qrc_filtered.reset_index()\n",
         "qrc_filtered"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4770,7 +4770,7 @@
         "id": "PZWtDgIxEEjq"
       },
       "source": [
-        "**The number of matches remaining is half of the row count, six games:**"
+        "**The number of matches remaining after removing the 50/50 ones, is half of the remaining row count- six games:**"
       ]
     },
     {
@@ -4805,24 +4805,24 @@
         "        val = 0\n",
         "    return val"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "kR6a6NRyGI06",
-        "outputId": "813b7b6a-d90b-4162-d5ae-11a002f1b18e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 421
-        }
+        },
+        "outputId": "813b7b6a-d90b-4162-d5ae-11a002f1b18e"
       },
       "source": [
         "qrc_filtered['if_correct'] = qrc_filtered.apply(how_pred, axis=1)\n",
         "qrc_filtered"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
