--- a/basic_version.ipynb
+++ b/basic_version.ipynb
@@ -6,7 +6,7 @@
       "name": "basic_version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPr+u8w+nCDk7tOgzRn2d4O",
+      "authorship_tag": "ABX9TyP2CMHmOdZrsJiX2HVi5WsL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6455,14 +6455,154 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "Js29mvQuCd31"
+        "id": "h7SbWV60Er0n"
       },
       "source": [
-        ""
+        "## **Week 5**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6SqnnWFeEwkv"
+      },
+      "source": [
+        "rframe_4 = w4_joined[['team','seq','win_prob_w4','rating_w_3']]"
       ],
-      "execution_count": 45,
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eebbgx-iFGoR",
+        "outputId": "fab71243-4d40-46fa-9803-b3c57c0b68d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
+      },
+      "source": [
+        "rframe_4['actual_w4'] = qrc['actual_w4']\n",
+        "rframe_4.head()"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>team</th>\n",
+              "      <th>seq</th>\n",
+              "      <th>win_prob_w4</th>\n",
+              "      <th>rating_w_3</th>\n",
+              "      <th>actual_w4</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>ADL</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.555683</td>\n",
+              "      <td>1510.000000</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>BRI</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.445134</td>\n",
+              "      <td>1490.575011</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>CAR</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0.500828</td>\n",
+              "      <td>1490.575011</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>COL</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0.526281</td>\n",
+              "      <td>1489.424989</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>ESS</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0.444306</td>\n",
+              "      <td>1491.138371</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  team  seq  win_prob_w4   rating_w_3  actual_w4\n",
+              "0  ADL    1     0.555683  1510.000000          1\n",
+              "1  BRI    2     0.445134  1490.575011          0\n",
+              "2  CAR    3     0.500828  1490.575011          1\n",
+              "3  COL    4     0.526281  1489.424989          0\n",
+              "4  ESS    5     0.444306  1491.138371          0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "khKFd8FNFXSM"
+      },
+      "source": [
+        "# Generate new ratings\n",
+        "rframe_4['rating_w_4'] = rframe_4['rating_w_3'] + (20*(rframe_4['actual_w4'] - rframe_4['win_prob_w4']))"
+      ],
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NOUVEUifF2cs"
+      },
+      "source": [
+        "contests_w4 = rframe_4\n",
+        "# Create opposition team rating column for R3:\n",
+        "contests_w5['opp_team'] = ['NME','WBD','GCS'.   ,'GWS','SYD','HAW',    'MEL','CAR','COL'.  ,'FRE','GEE','ADL'.  ,'RIC','PAD','WCE',    'ESS','BRI','STK']"
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
