--- a/basic_version.ipynb
+++ b/basic_version.ipynb
@@ -6,7 +6,7 @@
       "name": "basic_version.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPDNKJ4DSFbC3btSAOihqhn",
+      "authorship_tag": "ABX9TyOMwYtCH6i4xQFVnAWt0tY/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6644,12 +6644,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "s-QfUzGhIoXh",
-        "outputId": "7ce69ff7-6a4f-49e7-84e6-09fa3b499d05",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        }
+        },
+        "id": "s-QfUzGhIoXh",
+        "outputId": "7ce69ff7-6a4f-49e7-84e6-09fa3b499d05"
       },
       "source": [
         "## Now the formula for win probability can be applied row by row:\n",
@@ -6946,19 +6946,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VAhqk6LVIxcQ",
-        "outputId": "57806101-a64f-4ec9-9a91-95c1fb56d4f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        }
+        },
+        "id": "VAhqk6LVIxcQ",
+        "outputId": "aa88163b-2b97-449d-c074-e94cda43fd32"
       },
       "source": [
         "quick_results_check = w5_joined[['team','seq','win_prob_w5']]\n",
         "quick_results_check['actual_w5'] = [0,1,0,0,0,1,1,0,1,0,1,0,1,1,0,0,1,1]\n",
+        "quick_results_check.columns = ['team','seq','win_prob','actual']\n",
         "quick_results_check"
       ],
-      "execution_count": 61,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6984,8 +6985,8 @@
               "      <th></th>\n",
               "      <th>team</th>\n",
               "      <th>seq</th>\n",
-              "      <th>win_prob_w5</th>\n",
-              "      <th>actual_w5</th>\n",
+              "      <th>win_prob</th>\n",
+              "      <th>actual</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -7120,31 +7121,31 @@
               "</div>"
             ],
             "text/plain": [
-              "   team  seq  win_prob_w5  actual_w5\n",
-              "0   ADL    1     0.527954          0\n",
-              "1   BRI    2     0.499165          1\n",
-              "2   CAR    3     0.473637          0\n",
-              "3   COL    4     0.469741          0\n",
-              "4   ESS    5     0.500835          0\n",
-              "5   FRE    6     0.472046          1\n",
-              "6   GEE    7     0.554871          1\n",
-              "7   GCS    8     0.417662          0\n",
-              "8   GWS    9     0.418398          1\n",
-              "9   HAW   10     0.416839          0\n",
-              "10  MEL   11     0.583161          1\n",
-              "11  NME   12     0.445129          0\n",
-              "12  PAD   13     0.526363          1\n",
-              "13  RIC   14     0.499883          1\n",
-              "14  STK   15     0.500117          0\n",
-              "15  SYD   16     0.581602          0\n",
-              "16  WBD   17     0.582338          1\n",
-              "17  WCE   18     0.530259          1"
+              "   team  seq  win_prob  actual\n",
+              "0   ADL    1  0.527954       0\n",
+              "1   BRI    2  0.499165       1\n",
+              "2   CAR    3  0.473637       0\n",
+              "3   COL    4  0.469741       0\n",
+              "4   ESS    5  0.500835       0\n",
+              "5   FRE    6  0.472046       1\n",
+              "6   GEE    7  0.554871       1\n",
+              "7   GCS    8  0.417662       0\n",
+              "8   GWS    9  0.418398       1\n",
+              "9   HAW   10  0.416839       0\n",
+              "10  MEL   11  0.583161       1\n",
+              "11  NME   12  0.445129       0\n",
+              "12  PAD   13  0.526363       1\n",
+              "13  RIC   14  0.499883       1\n",
+              "14  STK   15  0.500117       0\n",
+              "15  SYD   16  0.581602       0\n",
+              "16  WBD   17  0.582338       1\n",
+              "17  WCE   18  0.530259       1"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 61
+          "execution_count": 73
         }
       ]
     },
@@ -7156,6 +7157,322 @@
       "source": [
         "**Add a column/function that takes in the 3rd and 4th columns, and calculates the number or percentage of correct predictions.**"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rb9FjOPUOrbE"
+      },
+      "source": [
+        "def perf_calc(df):\n",
+        "    df['fav_calc'] = (df['win_prob'] * df['actual'])\n",
+        "    if df['fav_calc']  > 0.5:\n",
+        "        df['fav_correct'] = 1\n",
+        "    else:\n",
+        "        df['fav_correct'] = 0\n",
+        "    return df"
+      ],
+      "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QJ31OaY6SkbM"
+      },
+      "source": [
+        "qrc = quick_results_check\n",
+        "qrc['fav_calc'] = (qrc['win_prob'] * qrc['actual'])"
+      ],
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mVJFrgBrQrtu",
+        "outputId": "fca8ff7b-64ae-424b-cf01-939a68ce0a53",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 607
+        }
+      },
+      "source": [
+        "qrc"
+      ],
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>team</th>\n",
+              "      <th>seq</th>\n",
+              "      <th>win_prob</th>\n",
+              "      <th>actual</th>\n",
+              "      <th>fav_calc</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>ADL</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.527954</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>BRI</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.499165</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.499165</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>CAR</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0.473637</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>COL</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0.469741</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>ESS</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0.500835</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>FRE</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0.472046</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.472046</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>GEE</td>\n",
+              "      <td>7</td>\n",
+              "      <td>0.554871</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.554871</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>GCS</td>\n",
+              "      <td>8</td>\n",
+              "      <td>0.417662</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>GWS</td>\n",
+              "      <td>9</td>\n",
+              "      <td>0.418398</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.418398</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>HAW</td>\n",
+              "      <td>10</td>\n",
+              "      <td>0.416839</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>MEL</td>\n",
+              "      <td>11</td>\n",
+              "      <td>0.583161</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.583161</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>NME</td>\n",
+              "      <td>12</td>\n",
+              "      <td>0.445129</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>PAD</td>\n",
+              "      <td>13</td>\n",
+              "      <td>0.526363</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.526363</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>RIC</td>\n",
+              "      <td>14</td>\n",
+              "      <td>0.499883</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.499883</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>STK</td>\n",
+              "      <td>15</td>\n",
+              "      <td>0.500117</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>SYD</td>\n",
+              "      <td>16</td>\n",
+              "      <td>0.581602</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>WBD</td>\n",
+              "      <td>17</td>\n",
+              "      <td>0.582338</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.582338</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>WCE</td>\n",
+              "      <td>18</td>\n",
+              "      <td>0.530259</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.530259</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   team  seq  win_prob  actual  fav_calc\n",
+              "0   ADL    1  0.527954       0  0.000000\n",
+              "1   BRI    2  0.499165       1  0.499165\n",
+              "2   CAR    3  0.473637       0  0.000000\n",
+              "3   COL    4  0.469741       0  0.000000\n",
+              "4   ESS    5  0.500835       0  0.000000\n",
+              "5   FRE    6  0.472046       1  0.472046\n",
+              "6   GEE    7  0.554871       1  0.554871\n",
+              "7   GCS    8  0.417662       0  0.000000\n",
+              "8   GWS    9  0.418398       1  0.418398\n",
+              "9   HAW   10  0.416839       0  0.000000\n",
+              "10  MEL   11  0.583161       1  0.583161\n",
+              "11  NME   12  0.445129       0  0.000000\n",
+              "12  PAD   13  0.526363       1  0.526363\n",
+              "13  RIC   14  0.499883       1  0.499883\n",
+              "14  STK   15  0.500117       0  0.000000\n",
+              "15  SYD   16  0.581602       0  0.000000\n",
+              "16  WBD   17  0.582338       1  0.582338\n",
+              "17  WCE   18  0.530259       1  0.530259"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 84
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_l23qfzsSxP7",
+        "outputId": "2ba93d49-cc4c-413d-e470-bca2f6f99154",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# subset rows for fav_calc > 0.5 then sum 'actual' to get correct preds\n",
+        "played = qrc['actual'].sum()\n",
+        "win_correct = qrc[qrc['fav_calc'] > 0.5]\n",
+        "win_correct['actual'].sum()"
+      ],
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rKuj8qqhT1QC",
+        "outputId": "9c79723d-1fe7-4d08-d6aa-3f20e131a006",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print('The ELO predictions were correct for',win_correct['actual'].sum(),'out of ',played,'matches' )"
+      ],
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The ELO predictions were correct for 5 out of  9 matches\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aMzjfhRmUdId"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
