--- a/basic_version_20210516.ipynb
+++ b/basic_version_20210516.ipynb
@@ -10387,6 +10387,26 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yONj5MPoVx2F"
+      },
+      "source": [
+        "## **Week 9**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qi416q3sV0Mh"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
