--- a/basic_version_20210516.ipynb
+++ b/basic_version_20210516.ipynb
@@ -10787,16 +10787,450 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CBgHWgYlWtT8"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CBgHWgYlWtT8",
+        "outputId": "bae6fb14-bedc-4886-f519-2a48a729bcba"
       },
       "source": [
         "contests = rframe\n",
         "# Create opposition team rating column for R9:\n",
-        "contests['opp_team'] = ['adl','bne','car','col','ess','fre','gee','gcs','gws','haw','mel','nme','pad','ric','stk','syd','wbd','wce']\n",
+        "contests['opp_team'] = ['WCE','GCS','MEL','SYD','FRE','ESS','STK','BRI','RIC','NME','CAR','HAW','WBD','GWS','GEE','COL','PAD','ADL']\n",
         "contests.columns"
       ],
-      "execution_count": null,
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['team', 'seq', 'win_prob_n1', 'rating_n2', 'actual_n1', 'rating_n1',\n",
+              "       'opp_team'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 108
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Or0ddwftbBIc"
+      },
+      "source": [
+        "# create concise lookup table which is a subset of contests:\n",
+        "lookup_vals = contests[['team','rating_n1']]\n",
+        "lookup_vals.columns = ['opp_team','rating_n1_opp']"
+      ],
+      "execution_count": 109,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QTr6xCGZbItE"
+      },
+      "source": [
+        "joined = pd.merge(contests, \n",
+        "                      lookup_vals, \n",
+        "                      on ='opp_team', \n",
+        "                      how ='left')"
+      ],
+      "execution_count": 110,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "id": "B8WzCuIzbNkB",
+        "outputId": "437b2fa2-c61a-4720-e9a7-502dc93d0fc2"
+      },
+      "source": [
+        "## Now the formula for win probability can be applied row by row:\n",
+        "joined['win_prob'] = 1/(1 + (10**((joined['rating_n1_opp'] - joined['rating_n1'])/400)))\n",
+        "joined.head()"
+      ],
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>team</th>\n",
+              "      <th>seq</th>\n",
+              "      <th>win_prob_n1</th>\n",
+              "      <th>rating_n2</th>\n",
+              "      <th>actual_n1</th>\n",
+              "      <th>rating_n1</th>\n",
+              "      <th>opp_team</th>\n",
+              "      <th>rating_n1_opp</th>\n",
+              "      <th>win_prob</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>ADL</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.443639</td>\n",
+              "      <td>1486.916841</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1478.044061</td>\n",
+              "      <td>WCE</td>\n",
+              "      <td>1518.828485</td>\n",
+              "      <td>0.441575</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>BRI</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.506987</td>\n",
+              "      <td>1512.692647</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1522.552906</td>\n",
+              "      <td>GCS</td>\n",
+              "      <td>1482.529968</td>\n",
+              "      <td>0.557344</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>CAR</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0.425807</td>\n",
+              "      <td>1491.133419</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1482.617277</td>\n",
+              "      <td>MEL</td>\n",
+              "      <td>1571.462500</td>\n",
+              "      <td>0.374857</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>COL</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0.517563</td>\n",
+              "      <td>1450.263285</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1459.912017</td>\n",
+              "      <td>SYD</td>\n",
+              "      <td>1516.829728</td>\n",
+              "      <td>0.418814</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>ESS</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0.466885</td>\n",
+              "      <td>1472.126629</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1462.788921</td>\n",
+              "      <td>FRE</td>\n",
+              "      <td>1497.976988</td>\n",
+              "      <td>0.449533</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  team  seq  win_prob_n1  ...  opp_team  rating_n1_opp  win_prob\n",
+              "0  ADL    1     0.443639  ...       WCE    1518.828485  0.441575\n",
+              "1  BRI    2     0.506987  ...       GCS    1482.529968  0.557344\n",
+              "2  CAR    3     0.425807  ...       MEL    1571.462500  0.374857\n",
+              "3  COL    4     0.517563  ...       SYD    1516.829728  0.418814\n",
+              "4  ESS    5     0.466885  ...       FRE    1497.976988  0.449533\n",
+              "\n",
+              "[5 rows x 9 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 111
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 607
+        },
+        "id": "orPQY4uhbTE9",
+        "outputId": "37921b85-96d6-4cc5-f114-edbe21ec9cff"
+      },
+      "source": [
+        "quick_results_check = joined[['team','seq','win_prob']]\n",
+        "quick_results_check['actual'] = [0,1,0,0,1,0,1,0,0,0,1,0,1,1,0,1,1,1]\n",
+        "quick_results_check.columns = ['team','seq','win_prob','actual']\n",
+        "quick_results_check"
+      ],
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>team</th>\n",
+              "      <th>seq</th>\n",
+              "      <th>win_prob</th>\n",
+              "      <th>actual</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>ADL</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.441575</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>BRI</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.557344</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>CAR</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0.374857</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>COL</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0.418814</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>ESS</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0.449533</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>FRE</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0.550467</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>GEE</td>\n",
+              "      <td>7</td>\n",
+              "      <td>0.526163</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>GCS</td>\n",
+              "      <td>8</td>\n",
+              "      <td>0.442656</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>GWS</td>\n",
+              "      <td>9</td>\n",
+              "      <td>0.502950</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>HAW</td>\n",
+              "      <td>10</td>\n",
+              "      <td>0.550650</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>MEL</td>\n",
+              "      <td>11</td>\n",
+              "      <td>0.625143</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>NME</td>\n",
+              "      <td>12</td>\n",
+              "      <td>0.449350</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>PAD</td>\n",
+              "      <td>13</td>\n",
+              "      <td>0.476320</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>RIC</td>\n",
+              "      <td>14</td>\n",
+              "      <td>0.497050</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>STK</td>\n",
+              "      <td>15</td>\n",
+              "      <td>0.473837</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>SYD</td>\n",
+              "      <td>16</td>\n",
+              "      <td>0.581186</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>WBD</td>\n",
+              "      <td>17</td>\n",
+              "      <td>0.523680</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>WCE</td>\n",
+              "      <td>18</td>\n",
+              "      <td>0.558425</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   team  seq  win_prob  actual\n",
+              "0   ADL    1  0.441575       0\n",
+              "1   BRI    2  0.557344       1\n",
+              "2   CAR    3  0.374857       0\n",
+              "3   COL    4  0.418814       0\n",
+              "4   ESS    5  0.449533       1\n",
+              "5   FRE    6  0.550467       0\n",
+              "6   GEE    7  0.526163       1\n",
+              "7   GCS    8  0.442656       0\n",
+              "8   GWS    9  0.502950       0\n",
+              "9   HAW   10  0.550650       0\n",
+              "10  MEL   11  0.625143       1\n",
+              "11  NME   12  0.449350       0\n",
+              "12  PAD   13  0.476320       1\n",
+              "13  RIC   14  0.497050       1\n",
+              "14  STK   15  0.473837       0\n",
+              "15  SYD   16  0.581186       1\n",
+              "16  WBD   17  0.523680       1\n",
+              "17  WCE   18  0.558425       1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 112
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aRh3d6sqc60u"
+      },
+      "source": [
+        "qrc = quick_results_check\n",
+        "qrc['fav_calc'] = (qrc['win_prob'] * qrc['actual'])"
+      ],
+      "execution_count": 114,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "34QNepLbdCQO"
+      },
+      "source": [
+        "# subset rows for fav_calc > 0.5 then sum 'actual' to get correct preds\n",
+        "played = qrc['actual'].sum()\n",
+        "win_correct = qrc[qrc['fav_calc'] > 0.5]\n",
+        "yep = win_correct['actual'].sum()"
+      ],
+      "execution_count": 115,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gMYMG3b6dH4h",
+        "outputId": "8cdc24e3-3ce2-43ef-8058-b345a7ce54fd"
+      },
+      "source": [
+        "print('The ELO predictions were correct for %d out of the %d matches' % (yep, played) )"
+      ],
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The ELO predictions were correct for 6 out of the 9 matches\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
