--- a/basic_version_20210522.ipynb
+++ b/basic_version_20210522.ipynb
@@ -11304,16 +11304,25 @@
         "id": "V3FVMmMJdmWt"
       },
       "source": [
-        "| Home team | Away Team | Favorite (Hearld-Sun) | notes |\n",
-        "| --- | --- | --- | --- |\n",
-        "|||||\n",
-        "|||||\n",
-        "|||||\n",
-        "|||||\n",
-        "|||||\n",
-        "|||||\n",
-        "|||||\n",
-        "|||||"
+        "| Home team | Away Team | Venue |Favorite (Herald-Sun) | notes |\n",
+        "| --- | --- | --- | --- | --- |\n",
+        "|Carlton|Hawthorn|M.C.G.|Carlton|no location advantage|\n",
+        "|Geelong|Gold Coast|Kardinia Park|Geelong|location advantage|\n",
+        "|Adelaide|Melbourne|Adelaide OVal|Melbourne|location advantage|\n",
+        "|Western Bulldogs|StKilda|Docklands Stadium|Western Bulldogs|no location advantage|\n",
+        "|Fremantle|Sydney|Perth Stadium| Fremantle (17-10)|location advantage|\n",
+        "|GWS Giants|West Coast|Giants Stadium|West Coast|location advantage|\n",
+        "|Collingwood|Port Adelaide|M.C.G.|Port Adelaide|location advantage|\n",
+        "|Essendon|North Melbourne|Docklands Stadium|Essendon|no location advantage|"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "USFaGox-qnpq"
+      },
+      "source": [
+        "From the five matches with a location advantage, the one that appears to be most finely balanced according to the Herald-Sun's published tips is Fremantle (17) v Sydney (10). I would expect the ELO to give a higher probability to Sydney, since it doesn't yet factor in location advantages. However, Fremantle would have a very good chance, arguably better than 50%."
       ]
     },
     {
@@ -11322,10 +11331,268 @@
         "id": "2ddUcn6jdUAi"
       },
       "source": [
-        ""
+        "## Need rating W9 (rating_n1 from joined) and win_prob W9 (win_prob from joined)\n",
+        "rframe = joined[['team','seq','win_prob','rating_n1']]"
       ],
-      "execution_count": null,
+      "execution_count": 115,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p7wMbliAsd_Y"
+      },
+      "source": [
+        "# Add the actuals (results from R9):\n",
+        "rframe['actual_n1'] = quick_results_check['actual']"
+      ],
+      "execution_count": 116,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 607
+        },
+        "id": "gCSj4VtAsksM",
+        "outputId": "dd0b12ba-8bb2-4a81-bcf1-b5daac4bbe89"
+      },
+      "source": [
+        "# Update column names for current week\n",
+        "rframe.columns = ['team','seq','win_prob_n1','rating_n2','actual_n1']\n",
+        "# Generate new ratings\n",
+        "rframe['rating_n1'] = rframe['rating_n2'] + (20*(rframe['actual_n1'] - rframe['win_prob_n1']))\n",
+        "rframe"
+      ],
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>team</th>\n",
+              "      <th>seq</th>\n",
+              "      <th>win_prob_n1</th>\n",
+              "      <th>rating_n2</th>\n",
+              "      <th>actual_n1</th>\n",
+              "      <th>rating_n1</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>ADL</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.441575</td>\n",
+              "      <td>1478.044061</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1469.212568</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>BRI</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.557344</td>\n",
+              "      <td>1522.552906</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1531.406022</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>CAR</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0.374857</td>\n",
+              "      <td>1482.617277</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1475.120130</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>COL</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0.418814</td>\n",
+              "      <td>1459.912017</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1451.535740</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>ESS</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0.449533</td>\n",
+              "      <td>1462.788921</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1473.798266</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>FRE</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0.550467</td>\n",
+              "      <td>1497.976988</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1486.967643</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>GEE</td>\n",
+              "      <td>7</td>\n",
+              "      <td>0.526163</td>\n",
+              "      <td>1519.425868</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1528.902606</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>GCS</td>\n",
+              "      <td>8</td>\n",
+              "      <td>0.442656</td>\n",
+              "      <td>1482.529968</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1473.676852</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>GWS</td>\n",
+              "      <td>9</td>\n",
+              "      <td>0.502950</td>\n",
+              "      <td>1504.508439</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1494.449446</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>HAW</td>\n",
+              "      <td>10</td>\n",
+              "      <td>0.550650</td>\n",
+              "      <td>1463.721642</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1452.708639</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>MEL</td>\n",
+              "      <td>11</td>\n",
+              "      <td>0.625143</td>\n",
+              "      <td>1571.462500</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1578.959647</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>NME</td>\n",
+              "      <td>12</td>\n",
+              "      <td>0.449350</td>\n",
+              "      <td>1428.405200</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1419.418202</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>PAD</td>\n",
+              "      <td>13</td>\n",
+              "      <td>0.476320</td>\n",
+              "      <td>1535.120409</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1545.594016</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>RIC</td>\n",
+              "      <td>14</td>\n",
+              "      <td>0.497050</td>\n",
+              "      <td>1502.458800</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1512.517792</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>STK</td>\n",
+              "      <td>15</td>\n",
+              "      <td>0.473837</td>\n",
+              "      <td>1501.229278</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1491.752540</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>SYD</td>\n",
+              "      <td>16</td>\n",
+              "      <td>0.581186</td>\n",
+              "      <td>1516.829728</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1525.206005</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>WBD</td>\n",
+              "      <td>17</td>\n",
+              "      <td>0.523680</td>\n",
+              "      <td>1551.587515</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1561.113908</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>WCE</td>\n",
+              "      <td>18</td>\n",
+              "      <td>0.558425</td>\n",
+              "      <td>1518.828485</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1527.659977</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   team  seq  win_prob_n1    rating_n2  actual_n1    rating_n1\n",
+              "0   ADL    1     0.441575  1478.044061          0  1469.212568\n",
+              "1   BRI    2     0.557344  1522.552906          1  1531.406022\n",
+              "2   CAR    3     0.374857  1482.617277          0  1475.120130\n",
+              "3   COL    4     0.418814  1459.912017          0  1451.535740\n",
+              "4   ESS    5     0.449533  1462.788921          1  1473.798266\n",
+              "5   FRE    6     0.550467  1497.976988          0  1486.967643\n",
+              "6   GEE    7     0.526163  1519.425868          1  1528.902606\n",
+              "7   GCS    8     0.442656  1482.529968          0  1473.676852\n",
+              "8   GWS    9     0.502950  1504.508439          0  1494.449446\n",
+              "9   HAW   10     0.550650  1463.721642          0  1452.708639\n",
+              "10  MEL   11     0.625143  1571.462500          1  1578.959647\n",
+              "11  NME   12     0.449350  1428.405200          0  1419.418202\n",
+              "12  PAD   13     0.476320  1535.120409          1  1545.594016\n",
+              "13  RIC   14     0.497050  1502.458800          1  1512.517792\n",
+              "14  STK   15     0.473837  1501.229278          0  1491.752540\n",
+              "15  SYD   16     0.581186  1516.829728          1  1525.206005\n",
+              "16  WBD   17     0.523680  1551.587515          1  1561.113908\n",
+              "17  WCE   18     0.558425  1518.828485          1  1527.659977"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 117
+        }
+      ]
     }
   ]
 }
