--- a/basic_version_20210522.ipynb
+++ b/basic_version_20210522.ipynb
@@ -12243,17 +12243,17 @@
         "id": "UgNZlmKsv4Ca"
       },
       "source": [
-        "| Home team | Away Team | Venue |notes | Herald-Sun favorite |\n",
-        "| --- | --- | --- | --- | --- |\n",
-        "| Brisbane | Richmond | GABBA | location advantage | Brisbane |\n",
-        "|Carlton|Hawthorn|M.C.G.|no location advantage| Carlton |\n",
-        "|Geelong|Gold Coast|Kardinia Park|location advantage|Geelong|\n",
-        "|Adelaide|Melbourne|Adelaide OVal|location advantage| Melbourne|\n",
-        "|Western Bulldogs|StKilda|Docklands Stadium|no location advantage| Western Bulldogs|\n",
-        "|Fremantle|Sydney|Perth Stadium|location advantage| Fremantle (17-10)|\n",
-        "|GWS Giants|West Coast|Giants Stadium|location advantage| West Coast|\n",
-        "|Collingwood|Port Adelaide|M.C.G.|location advantage| Port Adelaide |\n",
-        "|Essendon|North Melbourne|Docklands Stadium|no location advantage| Essendon|"
+        "| Home team | Away Team | Venue |notes | Herald-Sun favorite | ELO favorite | ELO favorite win prob|\n",
+        "| --- | --- | --- | --- | --- | --- | --- |\n",
+        "| Brisbane | Richmond | GABBA | location advantage | Brisbane | ||\n",
+        "|Carlton|Hawthorn|M.C.G.|no location advantage| Carlton |||\n",
+        "|Geelong|Gold Coast|Kardinia Park|location advantage|Geelong|||\n",
+        "|Adelaide|Melbourne|Adelaide Oval|location advantage| Melbourne|||\n",
+        "|Western Bulldogs|StKilda|Docklands Stadium|no location advantage| Western Bulldogs|||\n",
+        "|Fremantle|Sydney|Perth Stadium|location advantage| Fremantle (17-10)|||\n",
+        "|GWS Giants|West Coast|Giants Stadium|location advantage| West Coast|||\n",
+        "|Collingwood|Port Adelaide|M.C.G.|location advantage| Port Adelaide |||\n",
+        "|Essendon|North Melbourne|Docklands Stadium|no location advantage| Essendon|||"
       ]
     },
     {
