--- a/basic_version_20210527.ipynb
+++ b/basic_version_20210527.ipynb
@@ -12240,20 +12240,29 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "8UZSN50coqOF"
+      },
+      "source": [
+        "*Added 2021/05/27:* Having worked through predictions for Round 10, we now move ahead in time to the post-round results:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "UgNZlmKsv4Ca"
       },
       "source": [
-        "| Home team | Away Team | Venue |notes | Herald-Sun favorite |ELO favorite | ELO favorite win prob| Winner | ELO correct ?|\n",
+        "| Home team | Away Team | Venue |location advantage | Herald-Sun favorite |ELO favorite | ELO favorite win prob| Winner and margin | ELO correct |\n",
         "| :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- |:--- |\n",
-        "| Brisbane | Richmond | GABBA | location advantage | Brisbane | *Brisbane* |0.527| BRI|yes |\n",
-        "|Carlton|Hawthorn|M.C.G.|no location advantage| Carlton | *Carlton* |0.532| CAR |yes|\n",
-        "|Geelong|Gold Coast|Kardinia Park|location advantage|Geelong|*Geelong*|0.579|GEE |yes|\n",
-        "|Adelaide|Melbourne|Adelaide Oval|location advantage| Melbourne|*Melbourne* |0.653| ADL|no|\n",
-        "|Western Bulldogs|StKilda|Docklands Stadium|no location advantage| Western Bulldogs|Western Bulldogs|0.598|WBD|yes|\n",
-        "|Fremantle|Sydney|Perth Stadium|location advantage| Fremantle (17-10)|*Sydney*|0.555| FRE|no|\n",
-        "|GWS Giants|West Coast|Giants Stadium|location advantage| West Coast|*West Coast*|0.548|GWS|no|\n",
-        "|Collingwood|Port Adelaide|M.C.G.|location advantage| Port Adelaide |*Port Adelaide*|0.632|PAD|yes|\n",
-        "|Essendon|*North Melbourne*|Docklands Stadium|no location advantage| Essendon| *Essendon*|0.578| ESS|yes|"
+        "| Brisbane | Richmond | GABBA | yes | Brisbane | *Brisbane* |0.527| BRI (28 points) |<font color='green'>yes</font> |\n",
+        "|Carlton|Hawthorn|M.C.G.|no | Carlton | *Carlton* |0.532| CAR (23 points) |<font color='green'>yes</font>|\n",
+        "|Geelong|Gold Coast|Kardinia Park|yes|Geelong|*Geelong*|0.579|GEE (34 points) |<font color='green'>yes</font>|\n",
+        "|Adelaide|Melbourne|Adelaide Oval|yes| Melbourne|*Melbourne* |0.653| ADL (1 point) |<font color='red'>no</font>|\n",
+        "|Western Bulldogs|StKilda|Docklands Stadium|no| Western Bulldogs|Western Bulldogs|0.598|WBD (111 points) |<font color='green'>yes</font>|\n",
+        "|Fremantle|Sydney|Perth Stadium|yes| Fremantle (17-10)|*Sydney*|0.555| FRE (2 points) |<font color='red'>no</font>|\n",
+        "|GWS Giants|West Coast|Giants Stadium|yes| West Coast|*West Coast*|0.548|GWS (16 points) |<font color='red'>no</font>|\n",
+        "|Collingwood|Port Adelaide|M.C.G.|yes| Port Adelaide |*Port Adelaide*|0.632|PAD (1 point) |<font color='green'>yes</font>|\n",
+        "|Essendon|*North Melbourne*|Docklands Stadium|no| Essendon| *Essendon*|0.578| ESS (72 points) |<font color='green'>yes</font>|"
       ]
     },
     {
@@ -12262,7 +12271,7 @@
         "id": "FEFMlcBln7nX"
       },
       "source": [
-        "Of course this is a very small sample, but we see that for Round 9, the three incorrect ELO predictions were all location advantage games, where the lesser ranked home team won."
+        "Of course this is a very small sample, but we see that for Round 9 this basic ELO system scored 6/9 correctly. The three incorrect ELO predictions were all 'location advantage' games, where the lesser ranked home team won."
       ]
     },
     {
