--- a/basic_version_20210527.ipynb
+++ b/basic_version_20210527.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "basic_version_20210522.ipynb",
+      "name": "basic_version_20210527.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -12252,13 +12252,13 @@
         "id": "UgNZlmKsv4Ca"
       },
       "source": [
-        "| Home team | Away Team | Venue |location advantage | Herald-Sun favorite |ELO favorite | ELO favorite win prob| Winner and margin | ELO correct |\n",
+        "| Home team | Away Team | Venue |location advantage | Herald-Sun favorite |ELO predicted winner | ELO fav. win prob| Winner and margin | ELO correct |\n",
         "| :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- |:--- |\n",
         "| Brisbane | Richmond | GABBA | yes | Brisbane | *Brisbane* |0.527| BRI (28 points) |<font color='green'>yes</font> |\n",
         "|Carlton|Hawthorn|M.C.G.|no | Carlton | *Carlton* |0.532| CAR (23 points) |<font color='green'>yes</font>|\n",
         "|Geelong|Gold Coast|Kardinia Park|yes|Geelong|*Geelong*|0.579|GEE (34 points) |<font color='green'>yes</font>|\n",
         "|Adelaide|Melbourne|Adelaide Oval|yes| Melbourne|*Melbourne* |0.653| ADL (1 point) |<font color='red'>no</font>|\n",
-        "|Western Bulldogs|StKilda|Docklands Stadium|no| Western Bulldogs|Western Bulldogs|0.598|WBD (111 points) |<font color='green'>yes</font>|\n",
+        "|Western Bulldogs|StKilda|Docklands Stadium|no| Western Bulldogs|*Western Bulldogs*|0.598|WBD (111 points) |<font color='green'>yes</font>|\n",
         "|Fremantle|Sydney|Perth Stadium|yes| Fremantle (17-10)|*Sydney*|0.555| FRE (2 points) |<font color='red'>no</font>|\n",
         "|GWS Giants|West Coast|Giants Stadium|yes| West Coast|*West Coast*|0.548|GWS (16 points) |<font color='red'>no</font>|\n",
         "|Collingwood|Port Adelaide|M.C.G.|yes| Port Adelaide |*Port Adelaide*|0.632|PAD (1 point) |<font color='green'>yes</font>|\n",
